--- a/app/src/main/res/layout/activity_gift_card_details.xml
+++ b/app/src/main/res/layout/activity_gift_card_details.xml
@@ -6,18 +6,19 @@
     android:layout_height="match_parent"
     android:background="@color/et_bg_gray"
     android:orientation="vertical"
+    android:fitsSystemWindows="true"
     android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/_12sdp"
         android:background="@drawable/backgrndbtmcornrs"
         android:orientation="horizontal"
         android:paddingStart="@dimen/_21sdp"
         android:paddingTop="@dimen/_45sdp"
         android:paddingEnd="@dimen/_21sdp"
-        android:paddingBottom="@dimen/_14sdp">
+        android:paddingBottom="@dimen/_14sdp"
+        android:layout_marginBottom="@dimen/_12sdp">
 
         <LinearLayout
             android:id="@+id/giftCardDetailsLL"
@@ -49,13 +50,14 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-
+            android:orientation="vertical"
+            >
 
             <androidx.cardview.widget.CardView
                 android:layout_width="@dimen/_146sdp"
                 android:layout_height="@dimen/_80sdp"
                 android:layout_gravity="center"
+                app:cardBackgroundColor="@color/white"
                 app:cardCornerRadius="@dimen/_7sdp">
 
                 <ImageView
@@ -70,7 +72,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/_11sdp"
-                android:layout_marginTop="-10dp"
                 android:layout_marginRight="@dimen/_11sdp"
                 android:layout_marginBottom="@dimen/_11sdp"
                 app:cardBackgroundColor="@color/white"
@@ -102,7 +103,7 @@
                         android:autoLink="web"
                         android:ellipsize="end"
                         android:fontFamily="@font/opensans_semibold"
-                        android:maxLines="3"
+                        android:maxLines="2"
                         android:nestedScrollingEnabled="false"
                         android:textColor="@color/primary_black"
                         android:textSize="@dimen/_11ssp"
@@ -120,7 +121,7 @@
                         android:fontFamily="@font/opensans_semibold"
                         android:text="@string/view_all"
                         android:textColor="@color/primary_green"
-                        android:textSize="@dimen/_11sdp" />
+                        android:textSize="@dimen/_11ssp" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -177,13 +178,14 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:fontFamily="@font/opensans_semibold"
-                                    android:inputType="number"
+                                    android:inputType="numberDecimal"
                                     android:maxLength="7"
                                     android:padding="@dimen/_14sdp"
                                     android:textColor="@color/text_color"
                                     android:textColorHint="@color/light_gray"
                                     android:textCursorDrawable="@drawable/cursor_color"
-                                    android:textSize="@dimen/_12ssp" />
+                                    android:textSize="@dimen/_12ssp"
+                                    android:imeOptions="actionNext"/>
 
                             </com.google.android.material.textfield.TextInputLayout>
                         </RelativeLayout>
@@ -333,7 +335,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_14sdp"
-                        android:hint="Email"
+                        android:hint="Coyni@example.com"
                         android:textColorHint="@color/light_gray"
                         app:boxStrokeColor="@color/primary_green"
                         app:errorIconDrawable="@null"
@@ -389,7 +391,6 @@
 
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
-
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/purchaseCV"
