--- a/app/src/main/res/layout/activity_filters.xml
+++ b/app/src/main/res/layout/activity_filters.xml
@@ -638,7 +638,7 @@
                             android:fontFamily="@font/opensans_semibold"
                             android:hint="(CYN)"
                             android:imeOptions="actionDone"
-                            android:inputType="number"
+                            android:inputType="numberDecimal"
                             android:maxLength="@string/maxlength"
                             android:textColor="@color/primary_black"
                             android:textColorHint="@color/light_gray"
@@ -671,7 +671,7 @@
                             android:fontFamily="@font/opensans_semibold"
                             android:hint="(CYN)"
                             android:imeOptions="actionDone"
-                            android:inputType="number"
+                            android:inputType="numberDecimal"
                             android:maxLength="@string/maxlength"
                             android:textColor="@color/primary_black"
                             android:textColorHint="@color/light_gray"
