Withdraw token and buy token bug fixes

--- a/app/src/main/res/layout/activity_addpayment_method.xml
+++ b/app/src/main/res/layout/activity_addpayment_method.xml
@@ -68,7 +68,7 @@
                 android:visibility="gone" />
 
             <RelativeLayout
-                android:id="@+id/lyExternal"
+                android:id="@+id/lyAddExternal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_20sdp"
