--- a/app/src/main/res/layout/activity_gift_card_details.xml
+++ b/app/src/main/res/layout/activity_gift_card_details.xml
@@ -5,20 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/et_bg_gray"
-    android:orientation="vertical"
     android:fitsSystemWindows="true"
+    android:orientation="vertical"
     android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/_12sdp"
         android:background="@drawable/backgrndbtmcornrs"
         android:orientation="horizontal"
         android:paddingStart="@dimen/_21sdp"
         android:paddingTop="@dimen/_45sdp"
         android:paddingEnd="@dimen/_21sdp"
-        android:paddingBottom="@dimen/_14sdp"
-        android:layout_marginBottom="@dimen/_12sdp">
+        android:paddingBottom="@dimen/_14sdp">
 
         <LinearLayout
             android:id="@+id/giftCardDetailsLL"
@@ -50,8 +50,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
 
             <androidx.cardview.widget.CardView
                 android:layout_width="@dimen/_146sdp"
@@ -178,14 +177,14 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:fontFamily="@font/opensans_semibold"
+                                    android:imeOptions="actionNext"
                                     android:inputType="numberDecimal"
                                     android:maxLength="7"
                                     android:padding="@dimen/_14sdp"
                                     android:textColor="@color/text_color"
                                     android:textColorHint="@color/light_gray"
                                     android:textCursorDrawable="@drawable/cursor_color"
-                                    android:textSize="@dimen/_12ssp"
-                                    android:imeOptions="actionNext"/>
+                                    android:textSize="@dimen/_12ssp" />
 
                             </com.google.android.material.textfield.TextInputLayout>
                         </RelativeLayout>
