--- a/app/src/main/res/drawable/ic_camera.xml
+++ b/app/src/main/res/drawable/ic_camera.xml
@@ -8,13 +8,13 @@
       android:strokeLineJoin="round"
       android:strokeWidth="1.5"
       android:fillColor="#00000000"
-      android:strokeColor="#c5c5c5"
+      android:strokeColor="#767676"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M16.521,11.778A3.771,3.771 0,1 1,12.75 8.007,3.771 3.771,0 0,1 16.521,11.778Z"
       android:strokeLineJoin="round"
       android:strokeWidth="1.5"
       android:fillColor="#00000000"
-      android:strokeColor="#c5c5c5"
+      android:strokeColor="#767676"
       android:strokeLineCap="round"/>
 </vector>
