--- a/app/src/main/res/layout/activity_withdraw_token.xml
+++ b/app/src/main/res/layout/activity_withdraw_token.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f2f4f5"
-    android:orientation="vertical">
+    android:background="#f2f4f5">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -243,7 +242,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/opensans_bold"
-                                android:text="CYN"
+                                android:text=" CYN"
                                 android:textColor="@color/primary_black"
                                 android:textSize="@dimen/_12ssp"
                                 android:visibility="visible"></TextView>
@@ -313,7 +312,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/opensans_bold"
-                            android:text="CYN"
+                            android:text=" CYN"
                             android:textColor="@color/balance"
                             android:textSize="@dimen/_9ssp"></TextView>
 
