--- a/app/src/main/res/layout/fragment_request_amount_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_request_amount_bottom_sheet.xml
@@ -1,169 +1,167 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:background="@drawable/top_rounded_bg"
+    android:orientation="vertical"
     tools:context=".fragments.RequestAmountBottomSheet">
 
-        <View
-            android:layout_width="@dimen/_40sdp"
-            android:layout_height="@dimen/_2sdp"
-            android:background="@drawable/bg_core_colorfill"
-            android:layout_gravity="center"
-            android:layout_marginTop="@dimen/_13sdp"
-            android:layout_marginBottom="@dimen/_28sdp"
-            />
+    <View
+        android:layout_width="@dimen/_40sdp"
+        android:layout_height="@dimen/_2sdp"
+        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/_13sdp"
+        android:layout_marginBottom="@dimen/_28sdp"
+        android:background="@drawable/bg_core_colorfill" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-      android:gravity="center"
         android:layout_gravity="center"
+        android:gravity="center"
         android:orientation="horizontal">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Requesting "
-            android:textSize="@dimen/_12ssp"
+            android:layout_marginStart="@dimen/_11ssp"
+            android:layout_marginBottom="@dimen/_7sdp"
             android:fontFamily="@font/opensans_semibold"
             android:gravity="center"
-            android:layout_marginStart="@dimen/_11ssp"
+            android:text="Requesting "
             android:textColor="@color/black"
-            android:layout_marginBottom="@dimen/_7sdp"
-            />
-    <TextView
-        android:id="@+id/userNameRequestTV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="[SHiva s]"
-        android:textSize="@dimen/_12ssp"
-        android:fontFamily="@font/opensans_semibold"
-        android:gravity="center"
-        android:layout_marginEnd="@dimen/_13ssp"
-        android:textColor="@color/black"
-        android:layout_marginBottom="@dimen/_7sdp"
-        />
-    </LinearLayout>
-        <LinearLayout
+            android:textSize="@dimen/_12ssp" />
+
+        <TextView
+            android:id="@+id/userNameRequestTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center">
-            <TextView
-                android:id="@+id/requetAmountTV"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="160.00"
-                android:textSize="@dimen/_35sdp"
-                android:fontFamily="@font/opensans_bold"
-                android:textColor="@color/primary_color"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="CYN"
-                android:textColor="@color/primary_color"
-                android:textSize="@dimen/_11sdp"
-                android:fontFamily="@font/opensans_bold"
-                android:layout_gravity="right"
-                android:layout_marginLeft="@dimen/_6sdp"
-                android:paddingTop="@dimen/_24sdp"
-                android:paddingBottom="@dimen/_9sdp"
-                />
-        </LinearLayout>
+            android:layout_marginEnd="@dimen/_13ssp"
+            android:layout_marginBottom="@dimen/_7sdp"
+            android:fontFamily="@font/opensans_semibold"
+            android:gravity="center"
+            android:text="[SHiva s]"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_12ssp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/requetAmountTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/opensans_bold"
+            android:text="160.00"
+            android:textColor="@color/primary_color"
+            android:textSize="@dimen/_35sdp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginLeft="@dimen/_6sdp"
+            android:fontFamily="@font/opensans_bold"
+            android:paddingTop="@dimen/_24sdp"
+            android:paddingBottom="@dimen/_9sdp"
+            android:text="CYN"
+            android:textColor="@color/primary_color"
+            android:textSize="@dimen/_11sdp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/_11sdp"
+        android:layout_marginTop="@dimen/_22sdp"
+        android:layout_marginRight="@dimen/_11sdp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_7sdp"
+            android:layout_marginRight="@dimen/_10sdp"
+            android:layout_marginBottom="@dimen/_10sdp"
+            android:layout_weight="1"
+            android:fontFamily="@font/opensans_regular"
+            android:text="Recipient’s Address"
+            android:textColor="#767676"
+            android:textSize="@dimen/_11ssp" />
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:id="@+id/copyrequeRecipientLL"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="@dimen/_22sdp"
-            android:layout_marginLeft="@dimen/_11sdp"
-            android:layout_marginRight="@dimen/_11sdp"
-            >
+            android:layout_marginTop="@dimen/_7sdp"
+            android:layout_marginRight="@dimen/_6sdp"
+            android:layout_marginBottom="@dimen/_10sdp"
+            android:orientation="horizontal">
+
             <TextView
+                android:id="@+id/recipReqAddreTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Recipient’s Address"
-                android:textSize="@dimen/_11ssp"
-                android:fontFamily="@font/opensans_regular"
-                android:textColor="#767676"
-                android:layout_marginLeft="@dimen/_10sdp"
-                android:layout_marginRight="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_7sdp"
-                android:layout_marginBottom="@dimen/_10sdp"
-                />
-            <LinearLayout
-                android:id="@+id/copyrequeRecipientLL"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_7sdp"
-                android:layout_marginRight="@dimen/_6sdp"
-                android:layout_marginBottom="@dimen/_10sdp"
-                android:orientation="horizontal"
-                >
-                <TextView
-                    android:id="@+id/recipReqAddreTV"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/opensans_semibold"
-                    android:gravity="right"
-                    android:textColor="@color/black"
-                    android:textFontWeight="1"
-                    android:textSize="@dimen/_11ssp"
+                android:fontFamily="@font/opensans_semibold"
+                android:gravity="right"
+                android:textColor="@color/black"
+                android:textFontWeight="1"
+                android:textSize="@dimen/_11ssp" />
 
-                    />
-
-                <ImageView
-                    android:layout_width="@dimen/_11sdp"
-                    android:layout_height="@dimen/_11sdp"
-                    android:layout_marginTop="@dimen/_2sdp"
-                    android:layout_marginStart="@dimen/_4sdp"
-                    android:src="@drawable/ic_copy" />
-            </LinearLayout>
+            <ImageView
+                android:layout_width="@dimen/_11sdp"
+                android:layout_height="@dimen/_11sdp"
+                android:layout_marginStart="@dimen/_4sdp"
+                android:layout_marginTop="@dimen/_2sdp"
+                android:src="@drawable/ic_copy" />
         </LinearLayout>
-        <TextView
-            android:id="@+id/messageReTxt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Message"
-            android:textSize="@dimen/_11ssp"
-            android:fontFamily="@font/opensans_regular"
-            android:textColor="#767676"
-            android:layout_marginLeft="@dimen/_21sdp"
-            android:layout_marginTop="@dimen/_8sdp"
-            android:layout_marginRight="@dimen/_21sdp"
-            android:layout_marginBottom="@dimen/_6sdp"
-            />
-        <TextView
-            android:id="@+id/messageAddNote"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="“Hey friend, thanks for dinner the other night. \nHere’s what you owe me for my meal.”"
-            android:textSize="@dimen/_11ssp"
-            android:fontFamily="@font/opensans_regular"
-            android:textColor="#151515"
-            android:layout_marginLeft="@dimen/_21sdp"
-            android:layout_marginTop="@dimen/_6sdp"
-            android:layout_marginRight="@dimen/_21sdp"
-            android:layout_marginBottom="@dimen/_20sdp"
-            />
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/messageReTxt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/_21sdp"
+        android:layout_marginTop="@dimen/_8sdp"
+        android:layout_marginRight="@dimen/_21sdp"
+        android:layout_marginBottom="@dimen/_6sdp"
+        android:fontFamily="@font/opensans_regular"
+        android:text="Message"
+        android:textColor="#767676"
+        android:textSize="@dimen/_11ssp" />
+
+    <TextView
+        android:id="@+id/messageAddNote"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/_21sdp"
+        android:layout_marginTop="@dimen/_6sdp"
+        android:layout_marginRight="@dimen/_21sdp"
+        android:layout_marginBottom="@dimen/_20sdp"
+        android:fontFamily="@font/opensans_regular"
+        android:text="“Hey friend, thanks for dinner the other night. \nHere’s what you owe me for my meal.”"
+        android:textColor="#151515"
+        android:textSize="@dimen/_11ssp" />
+
     <androidx.constraintlayout.motion.widget.MotionLayout
+        android:id="@+id/lay_lock_main"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_48sdp"
-        android:id="@+id/lay_lock_main"
         android:layout_margin="@dimen/_20sdp"
+        android:background="@drawable/shape_round_rectable"
         android:elevation="@dimen/_2sdp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layoutDescription="@xml/activity_swipe_unloack_scene"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:background="@drawable/shape_round_rectable"
-        app:layoutDescription="@xml/activity_swipe_unloack_scene"
-        >
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/tv_lable"
@@ -185,9 +183,9 @@
             android:id="@+id/im_lock"
             android:layout_width="@dimen/_44sdp"
             android:layout_height="@dimen/_44sdp"
+            android:layout_marginStart="@dimen/_2sdp"
             android:layout_marginTop="@dimen/_2sdp"
             android:layout_marginBottom="@dimen/_2sdp"
-            android:layout_marginStart="@dimen/_2sdp"
             app:cardBackgroundColor="@color/slidebtn_bg"
             app:cardCornerRadius="@dimen/_21sdp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -198,9 +196,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:src="@drawable/ic_double_left"
-
-                />
+                android:src="@drawable/ic_double_left" />
 
         </androidx.cardview.widget.CardView>
 
@@ -209,39 +205,23 @@
             android:id="@+id/im_lock_"
             android:layout_width="@dimen/_44sdp"
             android:layout_height="@dimen/_44sdp"
-            android:layout_marginBottom="@dimen/_2sdp"
+            android:layout_marginStart="@dimen/_20sdp"
             android:layout_marginTop="@dimen/_2sdp"
             android:layout_marginEnd="@dimen/_2sdp"
-            android:layout_marginStart="@dimen/_20sdp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="@dimen/_2sdp"
+            android:visibility="invisible"
             app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="@dimen/_20sdp"
-            android:visibility="invisible">
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <ProgressBar
-                android:layout_gravity="center"
                 android:layout_width="@dimen/_20sdp"
                 android:layout_height="@dimen/_20sdp"
-                />
+                android:layout_gravity="center" />
 
         </androidx.cardview.widget.CardView>
-        <!--        <androidx.constraintlayout.utils.widget.ImageFilterView-->
-        <!--            android:id="@+id/image"-->
-        <!--            android:layout_marginBottom="16dp"-->
-        <!--            android:layout_marginTop="16dp"-->
-        <!--            android:layout_marginStart="16dp"-->
-        <!--            android:layout_marginEnd="16dp"-->
-        <!--            app:layout_constraintStart_toStartOf="parent"-->
-        <!--            app:layout_constraintTop_toTopOf="parent"-->
-        <!--            android:background="@color/white"-->
-        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
-        <!--            android:src="@drawable/right"-->
-        <!--            app:altSrc="@drawable/left"-->
-        <!--            android:layout_width="@dimen/_30sdp"-->
-        <!--            android:layout_height="@dimen/_30sdp"-->
-        <!--            />-->
 
     </androidx.constraintlayout.motion.widget.MotionLayout>
 
@@ -250,11 +230,13 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/_48sdp"
         android:layout_margin="20dp"
-        android:visibility="gone"
-        android:background="@drawable/shape_round_rectable">
+        android:background="@drawable/shape_round_rectable"
+        android:visibility="gone">
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:ellipsize="end"
@@ -264,27 +246,25 @@
             android:text="Success"
             android:textColor="@color/white"
             android:textSize="@dimen/_15sdp"
-            android:textStyle="bold"
-            android:layout_centerInParent="true"/>
+            android:textStyle="bold" />
 
 
         <androidx.cardview.widget.CardView
             android:layout_width="@dimen/_40sdp"
             android:layout_height="@dimen/_40sdp"
-            android:layout_marginBottom="@dimen/_2sdp"
-            android:layout_marginTop="@dimen/_4sdp"
-            app:cardBackgroundColor="@color/white"
-            android:layout_marginEnd="@dimen/_4sdp"
             android:layout_alignParentRight="true"
-            app:cardCornerRadius="@dimen/_20sdp"
-            android:visibility="visible">
+            android:layout_marginTop="@dimen/_4sdp"
+            android:layout_marginEnd="@dimen/_4sdp"
+            android:layout_marginBottom="@dimen/_2sdp"
+            android:visibility="visible"
+            app:cardBackgroundColor="@color/white"
+            app:cardCornerRadius="@dimen/_20sdp">
 
             <ImageView
-                android:layout_gravity="center"
                 android:layout_width="@dimen/_20sdp"
                 android:layout_height="@dimen/_20sdp"
-                android:src="@drawable/ic_check"
-                />
+                android:layout_gravity="center"
+                android:src="@drawable/ic_check" />
 
         </androidx.cardview.widget.CardView>
     </RelativeLayout>
