--- a/app/src/main/res/layout/withdraw_pay_method.xml
+++ b/app/src/main/res/layout/withdraw_pay_method.xml
@@ -70,15 +70,31 @@
             android:layout_weight="1"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tvPayMethod"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_20sdp"
-                android:fontFamily="@font/opensans_semibold"
-                android:text="External Bank Account"
-                android:textColor="@color/primary_black"
-                android:textSize="@dimen/_12ssp" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tvPayMethod"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/opensans_semibold"
+                    android:text="External Bank Account"
+                    android:textColor="@color/primary_black"
+                    android:textSize="@dimen/_12ssp" />
+
+                <TextView
+                    android:id="@+id/tvCount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/_10sdp"
+                    android:fontFamily="@font/opensans_regular"
+                    android:text="(0/0)"
+                    android:textColor="@color/dark_grey"
+                    android:textSize="@dimen/_12ssp" />
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/tvPayMMessage"
